@@ -1,3 +1,12 @@
+/*
+ * 版权所有:杭州火图科技有限公司
+ * 地址:浙江省杭州市滨江区西兴街道阡陌路智慧E谷B幢4楼
+ *
+ * (c) Copyright Hangzhou Hot Technology Co., Ltd.
+ * Floor 4,Block B,Wisdom E Valley,Qianmo Road,Binjiang District
+ * 2013-2016. All rights reserved.
+ */
+
 package com.huotu.hotcms.service.util;
 
 import javax.crypto.Cipher;
@@ -5,26 +14,27 @@ import javax.crypto.SecretKey;
 import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
 import java.security.SecureRandom;
+import java.util.Base64;
 
 /**
- * <P>
- *     Des加密帮助类
+ * <p>
+ * Des加密帮助类
  * </P>
  */
 public class DesEncryption {
     /**
      * DES算法密钥
      */
-    private static final byte[] DES_KEY = { 21, 1, -110, 82, -32, -85, -128, -65 };
+    private static final byte[] DES_KEY = {21, 1, -110, 82, -32, -85, -128, -65};
+
     /**
      * 数据加密，算法（DES）
      *
-     * @param data
-     *            要进行加密的数据
+     * @param data 要进行加密的数据
      * @return 加密后的数据
      */
     public static String encryptData(String data) {
-        String encryptedData = null;
+        String encryptedData;
         try {
             // DES算法要求有一个可信任的随机数源
             SecureRandom sr = new SecureRandom();
@@ -36,7 +46,7 @@ public class DesEncryption {
             Cipher cipher = Cipher.getInstance("DES");
             cipher.init(Cipher.ENCRYPT_MODE, key, sr);
             // 加密，并把字节数组编码成字符串
-            encryptedData = new sun.misc.BASE64Encoder().encode(cipher.doFinal(data.getBytes()));
+            encryptedData = Base64.getEncoder().encodeToString(cipher.doFinal(data.getBytes()));
         } catch (Exception e) {
             throw new RuntimeException("加密错误，错误信息：", e);
         }
@@ -46,8 +56,7 @@ public class DesEncryption {
     /**
      * 数据解密，算法（DES）
      *
-     * @param cryptData
-     *            加密数据
+     * @param cryptData 加密数据
      * @return 解密后的数据
      */
     public static String decryptData(String cryptData) {
@@ -63,7 +72,7 @@ public class DesEncryption {
             Cipher cipher = Cipher.getInstance("DES");
             cipher.init(Cipher.DECRYPT_MODE, key, sr);
             // 把字符串解码为字节数组，并解密
-            decryptedData = new String(cipher.doFinal(new sun.misc.BASE64Decoder().decodeBuffer(cryptData)));
+            decryptedData = new String(cipher.doFinal(Base64.getDecoder().decode(cryptData)));
         } catch (Exception e) {
             throw new RuntimeException("解密错误，错误信息：", e);
         }
